GearsetPOC/force-app/main/default/objects/Account/fields/End_Date_For_Staff_Insurance__c.field-meta.xml
<CustomField>
    <fullName>End_Date_For_Staff_Insurance__c</fullName>
    <formula>Start_Date_for_Staff_Insurance__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date For Staff Insurance</label>
    <type>Date</type>
</CustomField>