GearsetPOC/force-app/main/default/objects/Account/fields/EnrichmentAndProfiling_opt_in__c.field-meta.xml
<CustomField>
    <fullName>EnrichmentAndProfiling_opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enrichment And Profiling Opt In</label>
    <type>Checkbox</type>
</CustomField>