GearsetPOC/force-app/main/default/objects/Account/fields/Entity_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Entity_opt_in__c</fullName>
    <defaultValue>&quot;EIL&quot;</defaultValue>
    <label>Entity Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Eurostar_Limited</valueSetName>
    </valueSet>
</CustomField>