GearsetPOC/force-app/main/default/objects/Account/fields/Facebook_Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Profile_Picture__c</fullName>
    <formula>IF(NOT(ISBLANK( Facebook_Account__c )), Facebook_Account__r.Profile_Picture__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook Profile Picture</label>
    <type>Text</type>
</CustomField>