GearsetPOC/force-app/main/default/objects/Account/fields/FCR_Last_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Case_Closed_Date__c</fullName>
    <inlineHelpText>This is equal to the closed date of the latest case from this customer.
The default value is 01/01/2000</inlineHelpText>
    <label>FCR Last Case Closed Date</label>
    <type>Date</type>
</CustomField>