GearsetPOC/force-app/main/default/objects/Account/fields/FCR_Last_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Case_Number__c</fullName>
    <label>FCR Last Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>