GearsetPOC/force-app/main/default/objects/Account/fields/FCR_Last_Case_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Case_Reason_Code__c</fullName>
    <label>FCR Last Case Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>