GearsetPOC/force-app/main/default/objects/Account/fields/Fire_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Fire_Outbound_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Outbound Message</label>
    <type>Checkbox</type>
</CustomField>