GearsetPOC/force-app/main/default/objects/Account/fields/First_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Travel_Date__c</fullName>
    <description>Earliest travel date</description>
    <label>First Travel Date</label>
    <type>Date</type>
</CustomField>