GearsetPOC/force-app/main/default/objects/Account/fields/Group_Opt__c.field-meta.xml
<CustomField>
    <fullName>Group_Opt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Opt in</label>
    <type>Checkbox</type>
</CustomField>