GearsetPOC/force-app/main/default/objects/Account/fields/Guide_And_Assistance_Pet_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Guide_And_Assistance_Pet_Request_Status__c</fullName>
    <formula>TEXT( Guide_assistance_dog__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guide &amp; assistance dog Request Status</label>
    <type>Text</type>
</CustomField>