GearsetPOC/force-app/main/default/objects/Account/fields/Guide_assistance_dog__c.field-meta.xml
<CustomField>
    <fullName>Guide_assistance_dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guide &amp; assistance dog</label>
    <referenceTo>Guide_assistance_dog__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>