GearsetPOC/force-app/main/default/objects/Account/fields/Guide_assistance_dog_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Guide_assistance_dog_Expiry_Date__c</fullName>
    <formula>Guide_assistance_dog__r.Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guide &amp; assistance dog Expiry Date</label>
    <type>Date</type>
</CustomField>