GearsetPOC/force-app/main/default/objects/Account/fields/High_Importance_Permanent__c.field-meta.xml
<CustomField>
    <fullName>High_Importance_Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Importance (Permanent)</label>
    <type>Checkbox</type>
</CustomField>