GearsetPOC/force-app/main/default/objects/Account/fields/High_Importance_Temporary__c.field-meta.xml
<CustomField>
    <fullName>High_Importance_Temporary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Importance (Temporary)</label>
    <type>Checkbox</type>
</CustomField>