GearsetPOC/force-app/main/default/objects/Account/fields/Home_Phone_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Main_Contact__c</fullName>
    <formula>PersonHomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone (Main Contact)</label>
    <type>Text</type>
</CustomField>