GearsetPOC/force-app/main/default/objects/Account/fields/Hotels_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Hotels_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotels Opt In</label>
    <type>Checkbox</type>
</CustomField>