GearsetPOC/force-app/main/default/objects/Account/fields/ID_FULL__c.field-meta.xml
<CustomField>
    <fullName>ID_FULL__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (FULL)</label>
    <type>Text</type>
</CustomField>