GearsetPOC/force-app/main/default/objects/Account/fields/iLoyal_closing_point_blance__c.field-meta.xml
<CustomField>
    <fullName>iLoyal_closing_point_blance__c</fullName>
    <label>iLoyal closing point blance</label>
    <length>123</length>
    <type>Text</type>
</CustomField>