GearsetPOC/force-app/main/default/objects/Account/fields/Important_Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Customer_Information__c</fullName>
    <label>Important Customer Information</label>
    <type>TextArea</type>
</CustomField>