GearsetPOC/force-app/main/default/objects/Account/fields/Inactive_contact__c.field-meta.xml
<CustomField>
    <fullName>Inactive_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if your contact is not working in this company anymore and shouldn&#39;t be contacted anymore</inlineHelpText>
    <label>Inactive contact</label>
    <type>Checkbox</type>
</CustomField>