GearsetPOC/force-app/main/default/objects/Account/fields/Indirect_Sales_Topics__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Sales_Topics__c</fullName>
    <label>Indirect Sales Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Corporate Newsletter</fullName>
            </value>
            <value>
                <fullName>Disruption - Continental</fullName>
            </value>
            <value>
                <fullName>Disruption - London</fullName>
            </value>
            <value>
                <fullName>E4A Topics</fullName>
                <isActive>false</isActive>
                <label>E4A Topics</label>
            </value>
            <value>
                <fullName>E4B Newsletter</fullName>
            </value>
            <value>
                <fullName>Leisure Newsletter</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Miscellaneous topics</fullName>
                <isActive>false</isActive>
                <label>Miscellaneous topics</label>
            </value>
            <value>
                <fullName>Partner API Comms</fullName>
            </value>
            <value>
                <fullName>Promo &amp; OOS</fullName>
            </value>
            <value>
                <fullName>Promo Live</fullName>
            </value>
            <value>
                <fullName>Promo Testing</fullName>
            </value>
            <value>
                <fullName>RIT Comms</fullName>
            </value>
            <value>
                <fullName>Strike</fullName>
                <isActive>false</isActive>
                <label>Strike</label>
            </value>
            <value>
                <fullName>Timetable</fullName>
                <isActive>false</isActive>
                <label>Timetable</label>
            </value>
            <value>
                <fullName>TMC newsletter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>