GearsetPOC/force-app/main/default/objects/Account/fields/Industry_Sector_B__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector_B__c</fullName>
    <description>Business Registration data</description>
    <label>Industry Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>