GearsetPOC/force-app/main/default/objects/Account/fields/Is_Business_Account_B__c.field-meta.xml
<CustomField>
    <fullName>Is_Business_Account_B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Registration data</description>
    <label>Is Business Account</label>
    <type>Checkbox</type>
</CustomField>