GearsetPOC/force-app/main/default/objects/Account/fields/Is_Loyalty_Member_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_Loyalty_Member_Exist__c</fullName>
    <formula>IF(DELTA_Loyalty_Member__c == null, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Loyalty Member Exist</label>
    <type>Checkbox</type>
</CustomField>