GearsetPOC/force-app/main/default/objects/Account/fields/Known_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Known_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Known Customer Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>