GearsetPOC/force-app/main/default/objects/Account/fields/Legacy_Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Customer_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Customer Account Number*</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>