GearsetPOC/force-app/main/default/objects/Account/fields/Legacy_Vision_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Vision_Account_Number__c</fullName>
    <description>Used for v2 migration as the account number my be reused across RightNow and Vision/Unity</description>
    <externalId>true</externalId>
    <label>Legacy Vision Account Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>