GearsetPOC/force-app/main/default/objects/Account/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <formula>LEFT(LastName,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter</label>
    <type>Text</type>
</CustomField>