GearsetPOC/force-app/main/default/objects/Account/fields/Loyalty_Integration__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Integration</label>
    <type>Checkbox</type>
</CustomField>