GearsetPOC/force-app/main/default/objects/Account/fields/Loyalty_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member__c</fullName>
    <label>Loyalty Member</label>
    <length>20</length>
    <referenceTo>SalesforceMember__x</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>