GearsetPOC/force-app/main/default/objects/Account/fields/Members_Card_Has_Been_Returned_To_Us__c.field-meta.xml
<CustomField>
    <fullName>Members_Card_Has_Been_Returned_To_Us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Members Card Has Been Returned To Us</label>
    <type>Checkbox</type>
</CustomField>