GearsetPOC/force-app/main/default/objects/Account/fields/Merge_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Merge_Accounts__c</fullName>
    <formula>IF(
$Setup.Merge_Account_Permission__c.Access__c, 
HYPERLINK($Setup.Reference_Links__c.MergeAccountURL__c,IMAGE( $Setup.Reference_Links__c.MergeCustImage__c , &#39;Merge Account&#39;)),&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Accounts</label>
    <type>Text</type>
</CustomField>