GearsetPOC/force-app/main/default/objects/Account/fields/Most_Common_CoS__c.field-meta.xml
<CustomField>
    <fullName>Most_Common_CoS__c</fullName>
    <description>The &#39;mode&#39; of class of service - most common across all bookings</description>
    <label>Most Common CoS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>