GearsetPOC/force-app/main/default/objects/Account/fields/Most_Recent_Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Trip_Duration__c</fullName>
    <description>Most recent duration of trip</description>
    <label>Most Recent Trip Duration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>