GearsetPOC/force-app/main/default/objects/Account/fields/Name_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Name_Change_Count__c</fullName>
    <label>Name Change Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>