GearsetPOC/force-app/main/default/objects/Account/fields/Nominee_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Membership_Number__c</fullName>
    <formula>Nominee_Name__r.Membership_Number__pc</formula>
    <label>Nominee Membership Number</label>
    <type>Text</type>
</CustomField>