GearsetPOC/force-app/main/default/objects/Account/fields/Non_UK_Employees__c.field-meta.xml
<CustomField>
    <fullName>Non_UK_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-UK Employees</label>
    <type>Checkbox</type>
</CustomField>