GearsetPOC/force-app/main/default/objects/Account/fields/Not_Entitled_to_Staff_Travel_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Not_Entitled_to_Staff_Travel_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Entitled to Staff Travel Insurance</label>
    <type>Checkbox</type>
</CustomField>