GearsetPOC/force-app/main/default/objects/Account/fields/Number_Of_Fraud_Flags_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Fraud_Flags_On_Account__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Fraud Flags On Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>