GearsetPOC/force-app/main/default/objects/Account/fields/Opt_in_Corporate_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Corporate_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in Corporate Newsletter</label>
    <type>Checkbox</type>
</CustomField>