GearsetPOC/force-app/main/default/objects/Account/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <inlineHelpText>Name of the company, organisation, or school</inlineHelpText>
    <label>Organisation Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>