GearsetPOC/force-app/main/default/objects/Account/fields/Other_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Customer_Type__c</fullName>
    <label>Other Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>