GearsetPOC/force-app/main/default/objects/Account/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <description>Unique Partner ID sent to Datacash for Partner Vouchers Integration</description>
    <label>Partner ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>