GearsetPOC/force-app/main/default/objects/Account/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>Name of the Partner which appears in the eVoucher records and in the web form picklist on partner.eurostar.com</description>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>American Express Rewards</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>Eurostar For Business</fullName>
            </value>
            <value>
                <fullName>Feeling</fullName>
            </value>
            <value>
                <fullName>Japan Airlines</fullName>
            </value>
            <value>
                <fullName>l’Etudiant</fullName>
            </value>
            <value>
                <fullName>National Railcards</fullName>
            </value>
            <value>
                <fullName>Nectar</fullName>
            </value>
            <value>
                <fullName>Secret Cinema</fullName>
            </value>
            <value>
                <fullName>Stylist</fullName>
            </value>
            <value>
                <fullName>The Times</fullName>
            </value>
            <value>
                <fullName>Travelzoo</fullName>
            </value>
            <value>
                <fullName>Virgin Flying Club</fullName>
            </value>
            <value>
                <fullName>Wedoogift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>