GearsetPOC/force-app/main/default/objects/Account/fields/PersonContact_Id__c.field-meta.xml
<CustomField>
    <fullName>PersonContact_Id__c</fullName>
    <formula>PersonContact.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonContact.Id</label>
    <type>Text</type>
</CustomField>