GearsetPOC/force-app/main/default/objects/Account/fields/Postcode_B__c.field-meta.xml
<CustomField>
    <fullName>Postcode_B__c</fullName>
    <description>Business Registration data</description>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>