GearsetPOC/force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <formula>TEXT(Preferred_Language__pc)</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>