GearsetPOC/force-app/main/default/objects/Account/fields/Primary_Phone_Number_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number_Main_Contact__c</fullName>
    <formula>PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone Number (Main Contact)</label>
    <type>Text</type>
</CustomField>