GearsetPOC/force-app/main/default/objects/Account/fields/Raw_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Raw_Telephone_Number__c</fullName>
    <label>Raw Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>