GearsetPOC/force-app/main/default/objects/Account/fields/Received_COVID_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Received_COVID_Vouchers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received COVID Vouchers</label>
    <type>Checkbox</type>
</CustomField>