GearsetPOC/force-app/main/default/objects/Account/fields/Salesforce_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_Status__c</fullName>
    <label>Salesforce Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>