GearsetPOC/force-app/main/default/objects/Account/fields/Salesforce_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_Type__c</fullName>
    <label>Salesforce Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>