GearsetPOC/force-app/main/default/objects/Account/fields/Seg_Loyalty_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Seg_Loyalty_Registration_Date__c</fullName>
    <description>This field will be populated by Segmentation flow</description>
    <label>Loyalty Registration Date</label>
    <type>Date</type>
</CustomField>