GearsetPOC/force-app/main/default/objects/Account/fields/Social_Information__c.field-meta.xml
<CustomField>
    <fullName>Social_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Information</label>
    <referenceTo>SocialPersona</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>