GearsetPOC/force-app/main/default/objects/Account/fields/Source_Media_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Media_Channel__c</fullName>
    <label>How did you hear about E* for Agents?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friends and colleagues</fullName>
            </value>
            <value>
                <fullName>Business events (trade show, conference)</fullName>
            </value>
            <value>
                <fullName>Eurostar.com</fullName>
            </value>
            <value>
                <fullName>Company Intranet</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Online search engine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>