GearsetPOC/force-app/main/default/objects/Account/fields/Spouse_Partner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Partner_Last_Name__c</fullName>
    <label>Spouse/Partner Last Name</label>
    <length>188</length>
    <type>Text</type>
</CustomField>