GearsetPOC/force-app/main/default/objects/Account/fields/Staff_Member_is_Based_Overseas__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_is_Based_Overseas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Member is Based Overseas</label>
    <type>Checkbox</type>
</CustomField>