GearsetPOC/force-app/main/default/objects/Account/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created for Migration purposes</description>
    <label>Survey</label>
    <type>Checkbox</type>
</CustomField>