GearsetPOC/force-app/main/default/objects/Account/fields/SVOC_Integration__c.field-meta.xml
<CustomField>
    <fullName>SVOC_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SVOC Integration</label>
    <type>Checkbox</type>
</CustomField>