GearsetPOC/force-app/main/default/objects/Account/fields/TECH_Dell_Error__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dell_Error__c</fullName>
    <label>Boomi Audit Trail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>