GearsetPOC/force-app/main/default/objects/Account/fields/Telephone_No_B__c.field-meta.xml
<CustomField>
    <fullName>Telephone_No_B__c</fullName>
    <description>Business Registration data</description>
    <label>Telephone No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>