GearsetPOC/force-app/main/default/objects/Account/fields/TestSubscription__c.field-meta.xml
<CustomField>
    <fullName>TestSubscription__c</fullName>
    <label>TestSubscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubscribed</fullName>
                <default>true</default>
                <label>Unsubscribed</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>