GearsetPOC/force-app/main/default/objects/Account/fields/Tickets_Refunded_Staff__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Refunded_Staff__c</fullName>
    <label>Tickets Refunded (Staff)</label>
    <summarizedField>Staff_and_duty_travel__c.Number_of_Vouchers_to_Refund__c</summarizedField>
    <summaryForeignKey>Staff_and_duty_travel__c.Associated_account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>