GearsetPOC/force-app/main/default/objects/Account/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <description>Number of  bookings</description>
    <label>Total Bookings</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>