GearsetPOC/force-app/main/default/objects/Account/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Total revenue of  bookings</description>
    <label>Total Revenue</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>