GearsetPOC/force-app/main/default/objects/Account/fields/Trains_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Trains_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trains Opt In</label>
    <type>Checkbox</type>
</CustomField>