GearsetPOC/force-app/main/default/objects/Account/fields/Trips_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Trips_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trips Opt In</label>
    <type>Checkbox</type>
</CustomField>