GearsetPOC/force-app/main/default/objects/Account/fields/TSV_Allocation__c.field-meta.xml
<CustomField>
    <fullName>TSV_Allocation__c</fullName>
    <defaultValue>16</defaultValue>
    <label>TSV Allocation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>