GearsetPOC/force-app/main/default/objects/Account/fields/TSV_Balance__c.field-meta.xml
<CustomField>
    <fullName>TSV_Balance__c</fullName>
    <description>This field shows a calculation - taking the total calculation minus the override</description>
    <formula>((TSV_Allocation__c -  Aria_TSV_Used__c) - TSV_Override__c) +  Tickets_Refunded_Staff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSV Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>