GearsetPOC/force-app/main/default/objects/Account/fields/TSV_Override__c.field-meta.xml
<CustomField>
    <fullName>TSV_Override__c</fullName>
    <label>TSV Override</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>