GearsetPOC/force-app/main/default/objects/Account/fields/Unsubscribed_all_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_all_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed all</label>
    <type>Checkbox</type>
</CustomField>