GearsetPOC/force-app/main/default/objects/Account/fields/Upgrade_qualification__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_qualification__c</fullName>
    <label>Upgrade qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good will gesture</fullName>
            </value>
            <value>
                <fullName>Standard class upgrade</fullName>
            </value>
            <value>
                <fullName>Standard Premier upgrade</fullName>
            </value>
            <value>
                <fullName>Business Premier upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>