GearsetPOC/force-app/main/default/objects/Account/fields/Vonage_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Telephone_Number__c</fullName>
    <formula>Telephone_Country_Code_B__c + Telephone_No_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vonage Telephone Number</label>
    <type>Text</type>
</CustomField>